[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vyntrpy"
version = "0.1.0"
description = "Python API Wrapper for Vyntr"
authors = [{name = "PlOszukiwacz", email = "admin@ploszukiwacz.is-a.dev"}]
dependencies = [
    "requests"
]
readme = "README.md"
license = "GNU Affero General Public License v3.0"
keywords = ["vyntr"]
